# moml

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: base.yaml
data/: .gitignore
docs/: getting-started.md  how-predictions-become-md.md  index.md  roadmap.md
env/: environment.yml
momlca/: __init__.py
momlca/cli/: __init__.py  __main__.py
momlca/config/: __init__.py
momlca/data_pipeline/: __init__.py
momlca/evaluation/: __init__.py
momlca/featurizers/: __init__.py
momlca/models/: __init__.py
momlca/pipelines/: __init__.py
momlca/training/: __init__.py
momlca/utils/: __init__.py  logging.py
src/moml/: __init__.py  cli.py
src/moml/dataio/: __init__.py
src/moml/featurizers/: __init__.py
src/moml/ff/: __init__.py
src/moml/models/: __init__.py
src/moml/pipelines/: __init__.py
src/moml/sim/: __init__.py
tests/: test_import.py
tests/unit/: test_cli.py  test_import.py  test_logging.py
