[tool.poetry]
name = "moml-ca"
version = "0.1.0"
description = "Molecular Machine Learning for Chemical Automation"
readme = "README.md"
authors = ["MoML-CA Contributors <maintainers@moml-ca.org>"]
packages = [{ include = "momlca" }]
keywords = ["machine-learning", "chemistry", "graph-neural-networks", "simulation"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.0"
torch = "^2.3.0"
torch-geometric = "^2.5.0"
rdkit-pypi = "^2024.3.5"
simpy = { version = "^4.1.1", optional = true }
scipy = { version = "^1.11.0", optional = true }
mkdocs = { version = "^1.5.0", optional = true }
mkdocs-material = { version = "^9.5.0", optional = true }
mkdocstrings-python = { version = "^1.8.0", optional = true }
pytest = { version = "^8.2.0", optional = true }
pytest-cov = { version = "^5.0.0", optional = true }
ruff = { version = "^0.6.8", optional = true }
mypy = { version = "^1.10.0", optional = true }
pre-commit = { version = "^3.7.0", optional = true }

[tool.poetry.extras]
simulation = ["simpy", "scipy"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit"]

[tool.poetry.scripts]
momlca = "momlca.cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
packages = ["momlca"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --color=yes"
testpaths = ["tests"]
