[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moml"
version = "0.1.0"
description = "MoML-CA: molecular modeling and machine learning framework for PFAS analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "MoML-CA Team", email = "team@moml.ca"}]
keywords = ["molecular modeling", "graph neural networks", "PFAS", "machine learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "hydra-core>=1.3",
  "typer>=0.9",
  "dvc>=3,<4",
  "wandb>=0.16",
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "torchvision>=0.17",
  "torchaudio>=2.2",
  "torch-geometric>=2.4",
]
chemistry = [
  "rdkit-pypi>=2022.9",
  "openmm>=8.0",
  "openff-toolkit>=0.15",
]
dev = [
  "black>=24.1",
  "isort>=5.13",
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pre-commit>=3.6",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[project.scripts]
moml = "moml.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E203"]
target-version = "py310"

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true
packages = ["moml"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --showlocals --strict-markers"
testpaths = ["tests"]
